// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check UserPool Group Template Generated userpool group stack template during Push one group 1`] = `
Object {
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": Object {
    "ShouldNotCreateEnvResources": Object {
      "Fn::Equals": Array [
        Object {
          "Ref": "env",
        },
        "NONE",
      ],
    },
  },
  "Description": "Root Stack for AWS Amplify CLI",
  "Outputs": Object {
    "adminGroupRole": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "adminGroupRole",
          "Arn",
        ],
      },
    },
  },
  "Parameters": Object {
    "AuthRoleArn": Object {
      "Type": "String",
    },
    "UnauthRoleArn": Object {
      "Type": "String",
    },
    "authmockResourceAppClientID": Object {
      "Default": "authmockResourceAppClientID",
      "Type": "String",
    },
    "authmockResourceAppClientIDWeb": Object {
      "Default": "authmockResourceAppClientIDWeb",
      "Type": "String",
    },
    "authmockResourceIdentityPoolId": Object {
      "Default": "authmockResourceIdentityPoolId",
      "Type": "String",
    },
    "authmockResourceUserPoolId": Object {
      "Default": "authmockResourceUserPoolId",
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "adminGroup": Object {
      "Properties": Object {
        "Description": "override success",
        "GroupName": "admin",
        "Precedence": 1,
        "RoleArn": Object {
          "Fn::GetAtt": Array [
            "adminGroupRole",
            "Arn",
          ],
        },
        "UserPoolId": Object {
          "Ref": "authmockResourceUserPoolId",
        },
      },
      "Type": "AWS::Cognito::UserPoolGroup",
    },
    "adminGroupRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "authmockResourceIdentityPoolId",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
              "Sid": "",
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Ref": "authmockResourceUserPoolId",
              },
              "-adminGroupRole",
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Check UserPool Group Template Generated userpool group stack template during Push with two groups 1`] = `
Object {
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": Object {
    "ShouldNotCreateEnvResources": Object {
      "Fn::Equals": Array [
        Object {
          "Ref": "env",
        },
        "NONE",
      ],
    },
  },
  "Description": "Root Stack for AWS Amplify CLI",
  "Outputs": Object {
    "adminMockGroupRole": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "adminMockGroupRole",
          "Arn",
        ],
      },
    },
  },
  "Parameters": Object {
    "AuthRoleArn": Object {
      "Type": "String",
    },
    "UnauthRoleArn": Object {
      "Type": "String",
    },
    "authmockResourceAppClientID": Object {
      "Default": "authmockResourceAppClientID",
      "Type": "String",
    },
    "authmockResourceAppClientIDWeb": Object {
      "Default": "authmockResourceAppClientIDWeb",
      "Type": "String",
    },
    "authmockResourceIdentityPoolId": Object {
      "Default": "authmockResourceIdentityPoolId",
      "Type": "String",
    },
    "authmockResourceUserPoolId": Object {
      "Default": "authmockResourceUserPoolId",
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "adminMockGroup": Object {
      "Properties": Object {
        "Description": "override success",
        "GroupName": "adminMock",
        "Precedence": 2,
        "RoleArn": Object {
          "Fn::GetAtt": Array [
            "adminMockGroupRole",
            "Arn",
          ],
        },
        "UserPoolId": Object {
          "Ref": "authmockResourceUserPoolId",
        },
      },
      "Type": "AWS::Cognito::UserPoolGroup",
    },
    "adminMockGroupRole": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "ForAnyValue:StringLike": Object {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": Object {
                  "cognito-identity.amazonaws.com:aud": Object {
                    "Ref": "authmockResourceIdentityPoolId",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": "cognito-identity.amazonaws.com",
              },
              "Sid": "",
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "mockActions",
                  ],
                  "Effect": "Allow",
                  "Resource": Array [
                    "mockArn",
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "analytics-pinpoint-policy",
          },
        ],
        "RoleName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Ref": "authmockResourceUserPoolId",
              },
              "-adminMockGroupRole",
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
